--- a/Animated Page/index.html
+++ b/Animated Page/index.html
@@ -23,6 +23,32 @@
     <main>
         <section class="box-up-col">
             <p id="content">Content goes here</p>
+            <div>
+                <form>
+                    <input type="text" name="number" id="number">
+                    <fieldset class="box-up-col">
+                        <button id="input" type="button">Enter Boxes</button>
+                        <button id="view" type="button">View Boxes</button>
+                        <button id="pop" type="button">Pop Box</button>
+                        <button id="reset" type="button">Deploy Processes</button>
+                    </fieldset>
+                </form>
+            </div>
+        </section>
+        <section id="queue" class="box-up-row">
+            <div id="processes" class="left">
+                <!-- <div class="process">1</div>
+                <div class="process">2</div>
+                <div class="process">3</div>
+                <div class="process">4</div>
+                <div class="process">5</div>
+                <div class="process">6</div>
+                <div class="process">7</div>
+                <div class="process">8</div>
+                <div class="process">9</div>
+                <div class="process">10</div> -->
+            </div>
+            <div id="executed" class="right"></div>
         </section>
     </main>
     <footer class="box-up-col">
