Clean up the Home page

--- a/Animated Page/index.html
+++ b/Animated Page/index.html
@@ -14,7 +14,7 @@
         <img src="" alt="">
         <nav>
             <ul class="box-up-row">
-                <li>Home</li>
+                <li><a href="index.html">Home</a></li>
                 <li>Algorithms</li>
                 <li>Register</li>
             </ul>
@@ -22,33 +22,20 @@
     </header>
     <main>
         <section class="box-up-col">
-            <p id="content">Content goes here</p>
-            <div>
-                <form>
-                    <input type="text" name="number" id="number">
-                    <fieldset class="box-up-col">
-                        <button id="input" type="button">Enter Boxes</button>
-                        <button id="view" type="button">View Boxes</button>
-                        <button id="pop" type="button">Pop Box</button>
-                        <button id="reset" type="button">Deploy Processes</button>
-                    </fieldset>
-                </form>
+            <p id="content">Algorithms</p>
+            <hr>
+            <div class="box-up-row">
+                <div class="box-up-col">
+                    <h4>Non Pre-emptive</h4>
+                    <a href="Pages/first_come_first_served.html" class="algo-links">First Come First Serve</a>
+                    <a href="#" class="algo-links">Shortest Job Next</a>
+                </div>
+                <div class="box-up-col">
+                    <h4>Pre-emptive</h4>
+                    <a href="#" class="algo-links">Shortest Remaining Time</a>
+                    <a href="#" class="algo-links">Round Robin</a>
+                </div>
             </div>
-        </section>
-        <section id="queue" class="box-up-row">
-            <div id="processes" class="left">
-                <!-- <div class="process">1</div>
-                <div class="process">2</div>
-                <div class="process">3</div>
-                <div class="process">4</div>
-                <div class="process">5</div>
-                <div class="process">6</div>
-                <div class="process">7</div>
-                <div class="process">8</div>
-                <div class="process">9</div>
-                <div class="process">10</div> -->
-            </div>
-            <div id="executed" class="right"></div>
         </section>
     </main>
     <footer class="box-up-col">
