--- a/Animated Page/Pages/first_come_first_served.html
+++ b/Animated Page/Pages/first_come_first_served.html
@@ -7,6 +7,7 @@
     <title>Team A K's</title>
 
     <link rel="stylesheet" href="../Styles/style.css">
+    <link rel="stylesheet" href="../Styles/fc_fs.css">
     <script src="../Scripts/script.js" type="text/javascript"></script>
 </head>
 <body>
@@ -25,12 +26,18 @@
             <p id="content">Content goes here</p>
             <div>
                 <form>
-                    <input type="text" name="number" id="number">
                     <fieldset class="box-up-col">
-                        <button id="input" type="button">Enter Boxes</button>
-                        <button id="view" type="button">View Boxes</button>
-                        <button id="pop" type="button">Pop Box</button>
-                        <button id="reset" type="button">Deploy Processes</button>
+                        <label for="name">Enter Process Name</label>
+                        <input type="text" name="name" id="name">
+                        <label for="number">Enter Process Time</label>
+                        <input type="text" name="number" id="number">
+                        <br>
+                        <button id="input" type="button">Enter Process</button>
+                    </fieldset>
+                    <fieldset class="box-up-row">
+                        <button id="reset" type="button">Reset Queue</button>
+                        <button id="pop" type="button">Pop Process</button>
+                        <button id="start" type="button">Deploy Processes</button>
                     </fieldset>
                 </form>
             </div>
