Edited css and html
Edited css and html

--- a/Animated Page/index.html
+++ b/Animated Page/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="box-up-row">
-        <img src="" alt="">
+        <img src="logo.jpg" alt="logo.jpg">
         <nav>
             <ul class="box-up-row">
                 <li>Home</li>
@@ -24,29 +24,31 @@
         <section class="box-up-col">
             <p id="content">Content goes here</p>
             <div>
+            <input type="text" name="number" id="number">
+            </div>
+            <div>
                 <form>
-                    <input type="text" name="number" id="number">
                     <fieldset class="box-up-col">
-                        <button id="input" type="button">Enter Boxes</button>
-                        <button id="view" type="button">View Boxes</button>
-                        <button id="pop" type="button">Pop Box</button>
-                        <button id="reset" type="button">Deploy Processes</button>
+                        <button class= "button" role="button" id="input" type="button"><span class="text">Enter Boxes</span></button>
+                        <button class= "button" id="view" type="button"><span class="text">View Boxes</span></button>
+                        <button class= "button" id="pop" type="button"><span class="text">Pop Box</span></button>
+                        <button class= "button" id="reset" type="button"><span class="text">Deploy Processes</span></button>
                     </fieldset>
                 </form>
             </div>
         </section>
         <section id="queue" class="box-up-row">
             <div id="processes" class="left">
-                <!-- <div class="process">1</div>
-                <div class="process">2</div>
-                <div class="process">3</div>
-                <div class="process">4</div>
-                <div class="process">5</div>
-                <div class="process">6</div>
-                <div class="process">7</div>
-                <div class="process">8</div>
-                <div class="process">9</div>
-                <div class="process">10</div> -->
+                <!-- <div class="process">P1</div>
+                <div class="process">P2</div>
+                <div class="process">P3</div>
+                <div class="process">P4</div>
+                <div class="process">P5</div>
+                <div class="process">P6</div>
+                <div class="process">P7</div>
+                <div class="process">P8</div>
+                <div class="process">P9</div>
+                <div class="process">P10</div> -->
             </div>
             <div id="executed" class="right"></div>
         </section>
