Shoertest Job Next running
Runs assuming all processes are entered at the 0 (zero_ second mark.

--- a/Animated Page/index.html
+++ b/Animated Page/index.html
@@ -7,7 +7,6 @@
     <title>Team A K's</title>
 
     <link rel="stylesheet" href="Styles/style.css">
-    <script src="Scripts/script.js" type="text/javascript"></script>
 </head>
 <body>
     <header class="box-up-row">
@@ -28,7 +27,7 @@
                 <div class="box-up-col">
                     <h4>Non Pre-emptive</h4>
                     <a href="Pages/first_come_first_served.html" class="algo-links">First Come First Serve</a>
-                    <a href="#" class="algo-links">Shortest Job Next</a>
+                    <a href="Pages/shortest_job_next.html" class="algo-links">Shortest Job Next</a>
                 </div>
                 <div class="box-up-col">
                     <h4>Pre-emptive</h4>
@@ -36,6 +35,14 @@
                     <a href="#" class="algo-links">Round Robin</a>
                 </div>
             </div>
+        </section>
+        <section>
+            <details>
+                <summary>Need help?</summary>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, architecto debitis repellat quae adipisci, dolorem nihil voluptatem pariatur dolorum tempora quisquam accusantium expedita sapiente veniam, eum doloremque exercitationem rerum repudiandae a placeat corrupti magnam ratione consequatur ipsam. Ipsa atque aut cumque voluptatum consectetur. Minima quasi quod nam, magnam unde vitae!
+                </p>
+            </details>
         </section>
     </main>
     <footer class="box-up-col">
