--- a/Animated Page/Pages/shortest_job_next.html
+++ b/Animated Page/Pages/shortest_job_next.html
@@ -15,8 +15,8 @@
         <nav>
             <ul class="box-up-row">
                 <li><a href="../index.html">Home</a></li>
-                <li>Algorithms</li>
-                <li>Register</li>
+                <li><a href="#">Algorithms</a></li>
+                <li><a href="#">Register</a></li>
             </ul>
         </nav>
     </header>
@@ -26,17 +26,19 @@
             <div>
                 <form>
                     <fieldset class="box-up-col">
+                        <br>
                         <label for="name">Enter Process Name</label>
                         <input type="text" name="name" id="name">
+                        <br>
                         <label for="number">Enter Process Time</label>
                         <input type="text" name="number" id="number">
                         <br>
-                        <button id="input" type="button">Enter Process</button>
+                        <button class="button" id="input" type="button"><span>Enter Process</span></button>
                     </fieldset>
                     <fieldset class="box-up-row">
-                        <button id="reset" type="button">Reset Queue</button>
-                        <button id="pop" type="button">Pop Process</button>
-                        <button id="start" type="button">Deploy Processes</button>
+                        <button class="button" id="reset" type="button"><span>Reset Queue</span></button>
+                        <button class="button" id="pop" type="button"><span>Pop Process</span></button>
+                        <button class= "button" id="start" type="button"><span>Deploy Processes</span></button>
                     </fieldset>
                 </form>
             </div>
