changed css and htmls again
made minor changes

--- a/Animated Page/Pages/first_come_first_served.html
+++ b/Animated Page/Pages/first_come_first_served.html
@@ -23,12 +23,14 @@
     </header>
     <main>
         <section class="box-up-col">
-            <p id="content">Content goes here</p>
+            <p id="content">First Come First Served <i>(FCFS)</i></p>
             <div>
                 <form>
                     <fieldset class="box-up-col">
+                    <br>
                         <label for="name">Enter Process Name</label>
                         <input type="text" name="name" id="name">
+                        <br>
                         <label for="number">Enter Process Time</label>
                         <input type="text" name="number" id="number">
                         <br>
