--- a/Animated Page/Pages/shortest_job_next.html
+++ b/Animated Page/Pages/shortest_job_next.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <section class="box-up-col">
-            <p id="content">Content goes here</p>
+            <p id="content">Shortest Job Next <i>(SJN)</i></p>
             <div>
                 <form>
                     <fieldset class="box-up-col">
