--- a/Animated Page/index.html
+++ b/Animated Page/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <section class="box-up-col">
-            <p id="content">Algorithms</p>
+            <p id="content">Process Scheduling Algorithms</p>
             <hr>
             <div class="box-up-row">
                 <div class="box-up-col">
