--- a/Animated Page/index.html
+++ b/Animated Page/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="box-up-row">
-        <img src="logo.jpg" alt="logo.jpg">
+        <img src="ak.gif" alt="logo.jpg">
         <nav>
             <ul class="box-up-row">
                 <li><a href="index.html">Home</a></li>
@@ -39,8 +39,14 @@
         <section>
             <details>
                 <summary>Need help?</summary>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, architecto debitis repellat quae adipisci, dolorem nihil voluptatem pariatur dolorum tempora quisquam accusantium expedita sapiente veniam, eum doloremque exercitationem rerum repudiandae a placeat corrupti magnam ratione consequatur ipsam. Ipsa atque aut cumque voluptatum consectetur. Minima quasi quod nam, magnam unde vitae!
+                <p class="summary">
+                    A Process Scheduler schedules different processes to be assigned to the CPU based on particular scheduling algorithms. 
+                    There are four(4) process scheduling algorithms included on this site.
+                    These algorithms are either non-preemptive or preemptive. Non-preemptive algorithms are designed so that once a process 
+                    enters the running state, it cannot be preempted until it completes its allotted time, whereas the preemptive scheduling 
+                    is based on priority where a scheduler may preempt a low priority running process anytime when a high priority process 
+                    enters into a ready state. 
+                    FCFS and SJN are both preemptive algorithms while SRT and Round Robin are both non-preemptive algorithms.
                 </p>
             </details>
         </section>
