Shortest Time Remaining, Running

--- a/Animated Page/index.html
+++ b/Animated Page/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="box-up-col">
                     <h4>Pre-emptive</h4>
-                    <a href="#" class="algo-links">Shortest Remaining Time</a>
+                    <a href="Pages/shortest_time_remaining.html" class="algo-links">Shortest Remaining Time</a>
                     <a href="Pages/round_robin.html" class="algo-links">Round Robin</a>
                 </div>
             </div>
