Small changes made

--- a/Animated Page/Pages/round_robin.html
+++ b/Animated Page/Pages/round_robin.html
@@ -30,7 +30,7 @@
                         <input type="text" name="name" id="name" autocomplete="off">
                         <label for="number">Enter Process Time</label>
                         <input type="text" name="number" id="number" autocomplete="off">
-                        <label for="timer">Enter Process Set Time (Round Robin Time)</label>
+                        <label for="timer">Enter Quantum Time (Round Robin Time)</label>
                         <input type="text" name="timer" id="timer" autocomplete="off">
                         <p>Default is: 2 ms</p>
                         <br>
