Updated the Algorithm look

--- a/Animated Page/Pages/first_come_first_served.html
+++ b/Animated Page/Pages/first_come_first_served.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="box-up-row">
-        <img src="../logo.jpg" alt="logo.jpg">
+        <img src="../Images/logo.jpg" alt="logo.jpg">
         <nav>
             <ul class="box-up-row">
                 <li><a href="../index.html">Home</a></li>
