--- a/Animated Page/index.html
+++ b/Animated Page/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="box-up-row">
-        <img src="ak.gif" alt="logo.jpg">
+        <img src="Images/ak.gif" alt="logo.jpg">
         <nav>
             <ul class="box-up-row">
                 <li><a href="index.html">Home</a></li>
