Animations added to all algorithms

--- a/Animated Page/Pages/round_robin.html
+++ b/Animated Page/Pages/round_robin.html
@@ -7,11 +7,11 @@
     <title>Team A K's</title>
 
     <link rel="stylesheet" href="../Styles/style.css">
-    <script src="../Scripts/rr.js" type="text/javascript"></script>
+    <script src="../Scripts/r_r.js" type="text/javascript"></script>
 </head>
 <body>
     <header class="box-up-row">
-        <img src="../Images/ak.gif" alt="AK GIF">
+        <img src="../Images/logo.jpg" alt="AK GIF">
         <nav>
             <ul class="box-up-row">
                 <li><a href="../index.html">Home</a></li>
@@ -52,8 +52,8 @@
                     </fieldset>
                     <button id="input" type="button" class="button"><span class="text">Enter Process</span></button>
                 </div>
-                <div class="left-border box-up-col">
-                    <div class="box-up-col fifty">
+                <div class="left-border box-up-col fifty">
+                    <div class="box-up-col">
                         <fieldset class="box-up-col">
                             <button id="reset" type="button" class="button"><span class="text">Reset Queue</span></button>
                             <button id="pop" type="button" class="button"><span class="text">Pop Process</span></button>
@@ -70,9 +70,9 @@
                 <div class="right"><p class="box-up-row">EXECUTED</p></div>
             </div>
             <div class="queue">
-                <div id="processes" class="left long box-up-col"></div>
-                <div id="executed" class="middle long box-up-col"></div>
-                <div id="finished" class="right long box-up-col"></div>
+                <div id="processes" class="left long"></div>
+                <div id="executed" class="middle long"></div>
+                <div id="finished" class="right long"></div>
             </div>
         </section>
     </main>
